# foo_parameterization

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/foo/: foo_parameterization_cli.py  foo_parameterization_core.py  validation.py
tests/foo/: test_foo_parameterization_cli.py  test_foo_parameterization_core.py
