[tool.poetry]
name = "foo"
version = "0.1.0"
description = "A software package that calculates the complex (yet entirely fictitious) Foo et al. parameterization."
authors = ["Monica Suresh"]
license = "MIT"
readme = "README.md"
packages = [{include = "foo", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
scipy = ">=1.13.1"
numpy = ">=1.26.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
